btn-design export

--- a/src/frontend/TuneShare/src/app/confirm-export/confirm-export.component.scss
+++ b/src/frontend/TuneShare/src/app/confirm-export/confirm-export.component.scss
@@ -5,3 +5,12 @@
 .applemusicColor{
   color: #E7515F;
 }
+
+.btn-primary{
+  background: #8A5CA3;
+  border-color: #8A5CA3;
+}
+
+.btn-primary:hover{
+  background: #714b85;
+}
