--- a/src/frontend/TuneShare/src/app/playlist/playlist.component.scss
+++ b/src/frontend/TuneShare/src/app/playlist/playlist.component.scss
@@ -2,10 +2,13 @@
   color: #4F4E57;
   transition: transform 0.2s;
   max-width: 20em;
-  max-height: 22em;
   border: none;
   border-radius: 1em;
   transform: scale(1);
+
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
+  box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
 }
 
 .card-title{
@@ -110,4 +113,16 @@ a{
   display: none;
 }
 
+.cover-bg{
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+  text-align: center;
+  width: 16em;
+  height: 16em;
+  border-radius: 1em;
 
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
+  box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
+}
