--- a/src/frontend/TuneShare/src/app/playlist/playlist.component.scss
+++ b/src/frontend/TuneShare/src/app/playlist/playlist.component.scss
@@ -6,6 +6,7 @@
   border-radius: 1em;
   transform: scale(1);
 
+  padding: 0.3em;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
   -moz-box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
   box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
@@ -118,9 +119,10 @@ a{
   justify-content: center;
   justify-items: center;
   text-align: center;
-  width: 16em;
-  height: 16em;
+  max-width: 16em;
+  max-height: 16em;
   border-radius: 1em;
+  padding: 0.7em;
 
   -webkit-box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
   -moz-box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
