--- a/src/frontend/TuneShare/src/app/add-playlist/add-playlist.component.html
+++ b/src/frontend/TuneShare/src/app/add-playlist/add-playlist.component.html
@@ -1,3 +1,4 @@
+<button (click)="buttonClicked()">Click me!</button>
 <div class="py-3">
   <ul class="nav nav-tabs">
     <li class="nav-item" style="padding-left: 2em;">
