--- a/src/frontend/TuneShare/src/app/settings/settings.component.html
+++ b/src/frontend/TuneShare/src/app/settings/settings.component.html
@@ -1,4 +1,4 @@
-<h2 class="pt-4 container">Settings</h2>
+<h2 class="pt-4 container text-center">Settings</h2>
 <div class="container mt-3">
   <div class="card">
     <div class="card-header">
