--- a/src/frontend/TuneShare/src/app/list-of-users/list-of-users.component.html
+++ b/src/frontend/TuneShare/src/app/list-of-users/list-of-users.component.html
@@ -1,4 +1,4 @@
 <div class="mt-3">
   <div class="container" style="border-bottom: 2px solid #8A5CA3;"></div>
-  <div *ngFor="let user of userList"><app-user-listed [username]="user.username" [displayname]="user.displayname"></app-user-listed></div>
+  <div *ngFor="let user of userList"><app-user-listed [user]="user"></app-user-listed></div>
 </div>
