--- a/src/frontend/TuneShare/src/app/user-listed/user-listed.component.html
+++ b/src/frontend/TuneShare/src/app/user-listed/user-listed.component.html
@@ -7,8 +7,8 @@
            [ngClass]="{'bi-plus-square': !followed, 'bi-check-square-fill':followed}"></i>
       </a>
       <div>
-      <h4 class="displayname mb-0 px-2">{{ this.user?.display_name }}</h4>
-      <h5 class="px-2">&#64;{{ this.user?.username }}</h5>
+      <h4 class="displayname mb-0 px-2">{{ this.displayname }}</h4>
+      <h5 class="px-2">&#64;{{ this.username }}</h5>
       </div>
     </div>
   </a></div>
