--- a/src/frontend/TuneShare/src/app/user-listed/user-listed.component.html
+++ b/src/frontend/TuneShare/src/app/user-listed/user-listed.component.html
@@ -1,4 +1,4 @@
-<div class="card py-0">
+<div class="card py-0" *ngIf="displayname">
   <div class="container inside py-1"><a href="/profile?p={{ this.user?.id }}" style="text-decoration: none; color: black">
     <div class="d-flex align-items-center">
       <a href="javascript:" class="d-inline pe-1">
