--- a/src/frontend/TuneShare/src/app/homepage/homepage.component.html
+++ b/src/frontend/TuneShare/src/app/homepage/homepage.component.html
@@ -1,12 +1,4 @@
 <div class="container mt-4 mb-4">
-  <app-playlist-rotate class="mx-auto" [carouselId]="'carousel1'" [playlists]="playlists"
-                       [title]="'Your playlists'"></app-playlist-rotate>
-</div>
-<div class="container mt-3 mb-5">
-  <app-playlist-rotate class="mx-auto" [carouselId]="'carousel2'" [playlists]="playlists"
-                       [title]="'Your friend\'s most recent playlists'"></app-playlist-rotate>
-</div>
-<div class="container mt-3 mb-5">
-  <app-playlist-rotate class="mx-auto" [carouselId]="'carousel3'" [playlists]="playlists"
-                       [title]="'New on Spotify'"></app-playlist-rotate>
+  <app-playlist-rotate *ngIf="ownPlaylists.length>0" class="mx-auto" [carouselId]="'carousel1'" [playlists]="ownPlaylists"
+                       [title]="'Your Tuneshare playlists'"></app-playlist-rotate>
 </div>
