--- a/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
+++ b/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
@@ -76,7 +76,7 @@
       </span>
   </div>
   <div class="mt-4 mb-5 px-4 mx-auto" style="width: 95%;">
-    <h2 class="container">Playlists</h2>
+    <h2 class="container text-center">Playlists</h2>
     <app-playlistList [playlists]="playlists"></app-playlistList>
   </div>
 </div>
