--- a/src/frontend/TuneShare/src/app/homepage/homepage.component.html
+++ b/src/frontend/TuneShare/src/app/homepage/homepage.component.html
@@ -1,4 +1,10 @@
 <div class="container mt-4 mb-4">
-  <app-playlist-rotate *ngIf="ownPlaylists.length>0" class="mx-auto" [carouselId]="'carousel1'" [playlists]="ownPlaylists"
-                       [title]="'Your Tuneshare playlists'"></app-playlist-rotate>
+  <app-playlist-rotate *ngIf="ownPlaylists.length>0" class="mx-auto" [carouselId]="'carousel1'"
+                       [playlists]="ownPlaylists"
+                       [title]="'Your TuneShare playlists'"></app-playlist-rotate>
+
+  <div *ngFor="let user of followerWithPlaylists; let i = index ">
+    <app-playlist-rotate class="mx-auto" [carouselId]="'carousel'+(i+2)" [playlists]="followerWithPlaylists[i].playlists"
+                         [title]="'Playlists from @'+ user.user.username"></app-playlist-rotate>
+  </div>
 </div>
